--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "run": "react-scripts start",
+    "dev": "react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
